--- a/ml_project/pyproject.toml
+++ b/ml_project/pyproject.toml
@@ -15,6 +15,9 @@ omegaconf = "^2.3.0"
 pydantic = "^2.10.4"
 
 
+[tool.poetry.group.dev.dependencies]
+pdoc = "^15.0.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
