--- a/ml_project/pyproject.toml
+++ b/ml_project/pyproject.toml
@@ -17,6 +17,8 @@ pydantic = "^2.10.4"
 
 [tool.poetry.group.dev.dependencies]
 pdoc = "^15.0.1"
+mypy = "^1.14.0"
+ruff = "^0.8.4"
 
 [build-system]
 requires = ["poetry-core"]
