--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ scikit-learn = "^1.6.0"
 omegaconf = "^2.3.0"
 pydantic = "^2.10.3"
 loguru = "^0.7.3"
+fastapi = "^0.115.6"
+uvicorn = "^0.34.0"
+mlflow = "^2.19.0"
 
 
 [tool.poetry.group.dev.dependencies]
